@@ -52,6 +52,7 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.dao.DataRetrievalFailureException;
 import org.springframework.data.domain.Page;
@@ -82,6 +83,7 @@ import static org.mockito.Mockito.*;
 @Execution(CONCURRENT)
 class PackingV3ServiceTest extends CommonMocks {
 
+    @Spy
     @InjectMocks
     private PackingV3Service packingV3Service;
 
@@ -878,7 +880,14 @@ class PackingV3ServiceTest extends CommonMocks {
     void testUnAssignPackageContainers() throws RunnerException {
         UnAssignPackageContainerRequest request = new UnAssignPackageContainerRequest();
         packingV3Service.unAssignPackageContainers(request, Constants.CONSOLIDATION_PACKING);
-        verify(containerV3Service, never()).unAssignContainers(any(), any(), any());
+        verify(containerV3Service, never()).unAssignContainers(any(), any(), any(), any(), any(), any(), anyBoolean(), anyBoolean());
+    }
+
+    @Test
+    void testUnAssignPackageContainersWithReassignFlow() throws RunnerException {
+        UnAssignPackageContainerRequest request = new UnAssignPackageContainerRequest();
+        packingV3Service.unAssignPackageContainers(request, Constants.CONSOLIDATION_PACKING);
+        verify(containerV3Service, never()).unAssignContainers(any(), any(), any(), any(), any(), any(), anyBoolean(), anyBoolean());
     }
 
     @Test
@@ -890,7 +899,7 @@ class PackingV3ServiceTest extends CommonMocks {
         packing.setContainerId(1L);
         when(packingDao.findByIdIn(any())).thenReturn(List.of(packing));
         packingV3Service.unAssignPackageContainers(request, Constants.CONSOLIDATION_PACKING);
-        verify(containerV3Service).unAssignContainers(any(), any(), any());
+        verify(containerV3Service).unAssignContainers(any(), any(), any(), any(), any(), any(), anyBoolean(), anyBoolean());
     }
 
     @Test
@@ -1095,9 +1104,9 @@ class PackingV3ServiceTest extends CommonMocks {
     @Test
     void testAssignShipmentPackagesContainers_success() throws RunnerException {
 
-        ShipmentPackAssignmentRequest request = new ShipmentPackAssignmentRequest();
-        request.setPackingIds(List.of(1L, 2L));
+        AssignContainerRequest request = new AssignContainerRequest();
         request.setContainerId(100L);
+        request.setShipmentPackIds(Map.of(10L, List.of(1L, 2L)));
 
         Packing packing1 = new Packing();
         packing1.setId(1L);
@@ -1111,21 +1120,22 @@ class PackingV3ServiceTest extends CommonMocks {
         shipmentDetails.setId(10L);
         shipmentDetails.setShipmentType(Constants.CARGO_TYPE_FCL);
 
-        AssignContainerRequest assignContainerRequest = new AssignContainerRequest();
-        assignContainerRequest.setContainerId(request.getContainerId());
-        assignContainerRequest.setShipmentPackIds(Map.of(10L, request.getPackingIds()));
+        ContainerResponse expectedResponse = new ContainerResponse();
+        expectedResponse.setContainerCode("C123");
 
-        when(packingDao.findByIdIn(request.getPackingIds())).thenReturn(List.of(packing1, packing2));
+        when(packingDao.findByIdIn(List.of(1L, 2L))).thenReturn(List.of(packing1, packing2));
         when(shipmentService.findById(10L)).thenReturn(Optional.of(shipmentDetails));
-        when(containerV3Service.assignContainers(any(AssignContainerRequest.class), eq(SHIPMENT_PACKING)))
-                .thenReturn(new ContainerResponse());
+        when(containerV3Service.assignContainers(request, SHIPMENT_PACKING))
+                .thenReturn(expectedResponse);
 
-        ContainerResponse response = packingV3Service.assignShipmentPackagesContainers(assignContainerRequest);
+        ContainerResponse response = packingV3Service.assignShipmentPackagesContainers(request);
 
         assertNotNull(response);
-        verify(packingDao).findByIdIn(request.getPackingIds());
+        assertEquals(expectedResponse, response);
+
+        verify(packingDao).findByIdIn(List.of(1L, 2L));
         verify(shipmentService).findById(10L);
-        verify(containerV3Service).assignContainers(any(AssignContainerRequest.class), eq(SHIPMENT_PACKING));
+        verify(containerV3Service).assignContainers(request, SHIPMENT_PACKING);
     }
 
     @Test
@@ -1303,16 +1313,35 @@ class PackingV3ServiceTest extends CommonMocks {
     }
 
     @Test
-    void testAssignPackagesContainers_WithSingleShipmentId_DelegatesToContainerService() throws RunnerException {
-        AssignContainerRequest assignedContainerRequest = new AssignContainerRequest();
-        assignedContainerRequest.setShipmentPackIds(Map.of(1L, List.of(100L)));
-        ContainerResponse expectedResponse = new ContainerResponse();
-        Mockito.when(containerV3Service.assignContainers(assignedContainerRequest, Constants.CONSOLIDATION_PACKING))
-                .thenReturn(expectedResponse);
-        ContainerResponse containerResponse = packingV3Service.assignPackagesContainers(assignedContainerRequest);
-        assertEquals(expectedResponse, containerResponse);
-        Mockito.verify(containerV3Service).assignContainers(assignedContainerRequest, Constants.CONSOLIDATION_PACKING);
+    void assignPackagesContainers_multipleShipments_throwsValidationException() {
+        AssignContainerRequest request = new AssignContainerRequest();
+        Map<Long, List<Long>> shipmentPackIds = new HashMap<>();
+        shipmentPackIds.put(1L, Arrays.asList(101L));
+        shipmentPackIds.put(2L, Arrays.asList(201L));
+        request.setShipmentPackIds(shipmentPackIds);
+
+        assertThrows(ValidationException.class,
+                () -> packingV3Service.assignPackagesContainers(request));
     }
+
+    @Test
+    void assignPackagesContainers_singleShipment_delegatesToAssignContainers() throws RunnerException {
+        AssignContainerRequest request = new AssignContainerRequest();
+        Map<Long, List<Long>> shipmentPackIds = new HashMap<>();
+        shipmentPackIds.put(1L, Arrays.asList(101L, 102L));
+        request.setShipmentPackIds(shipmentPackIds);
+
+        ContainerResponse expectedResponse = new ContainerResponse();
+        expectedResponse.setContainerCode("C123");
+
+        when(containerV3Service.assignContainers(request, Constants.CONSOLIDATION_PACKING)).thenReturn(expectedResponse);
+
+        ContainerResponse actualResponse = packingV3Service.assignPackagesContainers(request);
+
+        assertEquals(expectedResponse, actualResponse);
+        verify(containerV3Service).assignContainers(request, Constants.CONSOLIDATION_PACKING);
+    }
+
 
     @Test
     void testCalculateCargoSummary_FCL() throws RunnerException {
